--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
   "name": "pizza-test",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/react-redux": "^7.1.24",
     "classnames": "^2.3.2",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
